# 2025_11_07_TestTask

./: .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  docker-compose.yaml
src/: .coverage  .env  alembic.ini  main.py  pyproject.toml  start.sh
src/alembic/: env.py
src/alembic/versions/: e25dafb4b95a_initial.py
src/api/: routers.py
src/core/: app.py  config.py  dependencies.py  enums.py  unit_of_work.py
src/db/: session.py
src/db/db_init/: init.sql
src/models/: incident.py
src/repositories/: abstract_incident.py  incident.py  mock_incident.py
src/schemas/: errors.py  incident.py
src/services/: incident.py
tests/: test_incident_service.py
