[project]
name = "ucar"
version = "0.1.0"
description = "Test task for UCar<>TopDoer"
authors = [
    {name = "Igor Mitiukliaev",email = "igor_m@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "asyncpg (>=0.30.0,<1.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "coverage (>=7.11.0,<8.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.coverage.run]
# Исключить директории и файлы из покрытия
omit = [
    "*/tests/*",         
    "*/__pycache__/*",   
    "*/migrations/*",    
    "*/alembic/*",       
    "*/venv/*",          
    "*/.venv/*",         
    "./main.py",         
    "./config.py",
    "./core/*.py",      # Файлы с перечислениями и базовыми классами      
    "./db.py",          # Файл конфигурации базы данных
    "./repositories/*",  # Репозитории
]
